# process-chain-anomaly-detection

./: README.md  pyproject.toml
data/examples/: test.xlsx
examples/: train.xlsx
legacy/: process_chain_model.py
src/process_chain_anomaly_detection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/process_chain_model/: __init__.py  cli.py  constants.py  io.py  metrics.py  model.py  parser.py
tests/: test_model.py  test_model_basic.py  test_parser.py
